# meteo-calavi

./: .gitignore  01_exploration.ipynb  02_data_cleaning.ipynb  03_first_model.ipynb  04_lags.ipynb  README.md  cleaned_data.py  draft.ipynb  linear_regression.py  pyproject.toml
data/processed/: aggregated.csv
